--- a/index.html
+++ b/index.html
@@ -1,15 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--Viewport meta tag sets up mobile browsers to read your media queries-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Add Google Fonts here-->
 
     <!--Link your stylesheet here-->
-
+    <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
 </head>
 <body>
+    <header>
+       <nav>
+           <div class="logo">
+                <img src="images/logo.png" alt="illustration of a watering can">
+           </div>
+
+           <div class="links">
+                <a href="#top">Home</a>
+                <a href="#about">About</a>
+                <a href="#">Plants</a>
+                <a href="#">Contact</a>
+           </div>
+       </nav>
+    </header>
+
+    <section id="top">
+        <div class="titles">
+            <h1>The Watering Can</h1>
+            <button>Shop Our Indoor Plant Sale</button>
+        </div>
+    </section>
+
+    <section id="about">
+        <div class="text">
+            <h2>Our Story</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem at delectus obcaecati perferendis corporis tenetur ex totam quaerat, fugiat architecto ut possimus, suscipit quibusdam est? Exercitationem inventore optio labore soluta!</p>
+        </div>
+    </section>
     
 </body>
 </html>
