added styles and reset to css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Add Google Fonts here-->
-
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <!--Link your stylesheet here-->
     <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
@@ -92,8 +92,9 @@
         </div>
 
         <div class="right">
-            <img src="images/shop.jpg" alt="image of shop space inside of the watering can">
+            <img src="images/shop.jpg" alt="images of shop space inside of the watering can">
         </div>
+
         <div class="bottom">
             <p>Copyright 2021</p>
         </div>
