styled shop section in css

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </section>
 
     <section id="about">
-        <div class="text">
+        <div class="txt">
             <h2>Our Story</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem at delectus obcaecati perferendis corporis tenetur ex totam quaerat, fugiat architecto ut possimus, suscipit quibusdam est? Exercitationem inventore optio labore soluta!</p>
         </div>
@@ -51,6 +51,7 @@
                 <div>
                     <h3>Succulants</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam labore reiciendis fugiat, doloremque excepturi repudiandae fugit corporis error ratione quia dolores rerum earum in eos similique modi eum quos accusamus!</p>
+                    <button>Shop Now!</button>
                 </div>
             </div>
 
