finalized css styles

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         <h2>Our Plants</h2>
         <div class="container">
 
-            <div class="bgimg succulants">
+            <div class="bgimg succulants one">
                 <!--empty div, img in css-->
             </div>
-            <div class="shoptxt">
+            <div class="shoptxt two">
                 <div>
                     <h3>Succulants</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam labore reiciendis fugiat, doloremque excepturi repudiandae fugit corporis error ratione quia dolores rerum earum in eos similique modi eum quos accusamus!</p>
@@ -55,21 +55,21 @@
                 </div>
             </div>
 
-            <div class="shoptxt">
+            <div class="shoptxt four">
                 <div>
                     <h3>Cacti</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum eaque, distinctio vitae saepe totam mollitia voluptatum libero odio tenetur quasi sit necessitatibus voluptatem vero odit eos asperiores sapiente amet quaerat.</p>
                     <button>Shop Now!</button>
                 </div>
             </div>
-            <div class="bgimg cacti">
+            <div class="bgimg cacti three">
                 <!--empty-->
             </div>
 
-            <div class="bgimg tropicals">
+            <div class="bgimg tropicals five">
                 <!--empty-->
             </div>
-            <div class="shoptxt">
+            <div class="shoptxt six">
                 <div>
                     <h3>Tropicals</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, in dolorum fugit beatae ab sed vitae ipsum nihil corrupti quia cum! Perferendis magni voluptas at dolore consequatur libero consectetur atque.</p>
@@ -83,6 +83,7 @@
     <footer id = "contact">
         <h2>Get in Touch!</h2>
         <div class="left">
+            <div>
             <h3>Find us here:</h3>
             <address>123 Plant Lanebr <br>
             Boomfield Ontario<br>
@@ -91,7 +92,8 @@
             <a href="mailto:info@thewateringcan.ca">info@thewateringcan.ca</a>
             <p>@thewateringcan on the socials</p>
         </div>
-
+        </div>
+        
         <div class="right">
             <img src="images/shop.jpg" alt="images of shop space inside of the watering can">
         </div>
